# docs/api/openapi.yml
@@ -1,26 +1,11 @@
 components:
   schemas:
-    AuthtypesAttributeMapping:
-      properties:
-        email:
-          type: string
-        groups:
-          type: string
-        name:
-          type: string
-        role:
-          type: string
-      type: object
     AuthtypesAuthDomainConfig:
       properties:
         googleAuthConfig:
           $ref: '#/components/schemas/AuthtypesGoogleConfig'
-        oidcConfig:
-          $ref: '#/components/schemas/AuthtypesOIDCConfig'
         roleMapping:
           $ref: '#/components/schemas/AuthtypesRoleMapping'
-        samlConfig:
-          $ref: '#/components/schemas/AuthtypesSamlConfig'
         ssoEnabled:
           type: boolean
         ssoType:
@@ -65,14 +50,10 @@ components:
           type: string
         name:
           type: string
-        oidcConfig:
-          $ref: '#/components/schemas/AuthtypesOIDCConfig'
         orgId:
           type: string
         roleMapping:
           $ref: '#/components/schemas/AuthtypesRoleMapping'
-        samlConfig:
-          $ref: '#/components/schemas/AuthtypesSamlConfig'
         ssoEnabled:
           type: boolean
         ssoType:
@@ -159,23 +140,6 @@ components:
         redirectURI:
           type: string
         serviceAccountJson:
-          type: string
-      type: object
-    AuthtypesOIDCConfig:
-      properties:
-        claimMapping:
-          $ref: '#/components/schemas/AuthtypesAttributeMapping'
-        clientId:
-          type: string
-        clientSecret:
-          type: string
-        getUserInfo:
-          type: boolean
-        insecureSkipEmailVerified:
-          type: boolean
-        issuer:
-          type: string
-        issuerAlias:
           type: string
       type: object
     AuthtypesObject:
@@ -303,19 +267,6 @@ components:
           type: object
         useRoleAttribute:
           type: boolean
-      type: object
-    AuthtypesSamlConfig:
-      properties:
-        attributeMapping:
-          $ref: '#/components/schemas/AuthtypesAttributeMapping'
-        insecureSkipAuthNRequestsSigned:
-          type: boolean
-        samlCert:
-          type: string
-        samlEntity:
-          type: string
-        samlIdp:
-          type: string
       type: object
     AuthtypesSessionContext:
       properties:
@@ -3314,119 +3265,6 @@ paths:
                 $ref: '#/components/schemas/RenderErrorResponse'
           description: Internal Server Error
       summary: Create session by google callback
-      tags:
-      - sessions
-  /api/v1/complete/oidc:
-    get:
-      deprecated: false
-      description: This endpoint creates a session for a user using oidc callback
-      operationId: CreateSessionByOIDCCallback
-      responses:
-        "303":
-          content:
-            application/json:
-              schema:
-                properties:
-                  data:
-                    $ref: '#/components/schemas/AuthtypesGettableToken'
-                  status:
-                    type: string
-                required:
-                - status
-                - data
-                type: object
-          description: See Other
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RenderErrorResponse'
-          description: Bad Request
-        "404":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RenderErrorResponse'
-          description: Not Found
-        "451":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RenderErrorResponse'
-          description: Unavailable For Legal Reasons
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RenderErrorResponse'
-          description: Internal Server Error
-      summary: Create session by oidc callback
-      tags:
-      - sessions
-  /api/v1/complete/saml:
-    post:
-      deprecated: false
-      description: This endpoint creates a session for a user using saml callback
-      operationId: CreateSessionBySAMLCallback
-      parameters:
-      - in: query
-        name: RelayState
-        schema:
-          type: string
-      - in: query
-        name: SAMLResponse
-        schema:
-          type: string
-      requestBody:
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              properties:
-                RelayState:
-                  type: string
-                SAMLResponse:
-                  type: string
-              type: object
-      responses:
-        "303":
-          content:
-            application/json:
-              schema:
-                properties:
-                  data:
-                    $ref: '#/components/schemas/AuthtypesGettableToken'
-                  status:
-                    type: string
-                required:
-                - status
-                - data
-                type: object
-          description: See Other
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RenderErrorResponse'
-          description: Bad Request
-        "404":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RenderErrorResponse'
-          description: Not Found
-        "451":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RenderErrorResponse'
-          description: Unavailable For Legal Reasons
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RenderErrorResponse'
-          description: Internal Server Error
-      summary: Create session by saml callback
       tags:
       - sessions
   /api/v1/dashboards/{id}/public:
